--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -4,10 +4,6 @@ h2 {
 
 body {
     background-color: #eeeeee;
-    margin: 0;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
 }
 
 /* ==========headerここから========== */
@@ -41,7 +37,6 @@ body {
     justify-content: space-between; /* 両端に寄せる */
     align-items: center; /* 垂直方向中央 */
     height: 100%;
-    box-sizing: border-box; /* paddingを高さに含める */
 }
 
 .header-right {
@@ -131,6 +126,12 @@ body {
 
 /* ==========sectionここから========== */
 
+main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 section {
     width: 75vw;
     background-color: #fff;
@@ -141,6 +142,7 @@ section {
     padding: 30px;
     height: 200px;/* 固定するかどうか決める */
 }
+
 
 .section-profile {
     /*
@@ -193,5 +195,6 @@ section {
     background-color: rgba(0, 0, 0, 0.5);
     color: #fff; /* アイコンの色を白に */
 }
+
 
 /* ==========footerここまで========== */
