--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -60,20 +60,23 @@ const hasMorePosts = posts.length > 6;
                     <a href="/" class="header-icon-link" aria-label="制作物"><i class="fa-solid fa-cube"></i></a>
                     <a href="/" class="header-icon-link share" aria-label="共有"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
-                <button class="nav-button" id="nav-toggle">
-                    <i class="fas fa-bars"></i>
-                </button>
-                <nav class="header-overlay-nav" id="overlay-nav">
-                    <div class="nav-list">
-                        <a href="/" class="header-icon-link" aria-label="プロフィール"><i class="fas fa-user"></i></a>
-                        <a href="/" class="header-icon-link" aria-label="ホーム"><i class="fas fa-book"></i></a>
-                        <a href="/" class="header-icon-link" aria-label="制作物"><i class="fas fa-tools"></i></a>
-                        <a href="/" class="header-icon-link share" aria-label="共有"><i class="fas fa-share-square"></i></a>
-                    </div>
-                </nav>
         </header>
 
+        <button class="nav-button" id="nav-toggle">
+            <i class="fas fa-bars"></i>
+        </button>
+
+        <nav class="header-overlay-nav" id="overlay-nav">
+            <div class="nav-list">
+                <a href="/" class="header-icon-link" aria-label="プロフィール"><i class="fas fa-user"></i></a>
+                <a href="/" class="header-icon-link" aria-label="ホーム"><i class="fas fa-book"></i></a>
+                <a href="/" class="header-icon-link" aria-label="制作物"><i class="fas fa-tools"></i></a>
+                <a href="/" class="header-icon-link share" aria-label="共有"><i class="fas fa-share-square"></i></a>
+            </div>
+        </nav>
+
         <main>
+            <div class="blank"></div>
             <section class="section-profile">
                 <h2 class="section-title">About</h2>
             </section>
@@ -90,7 +93,8 @@ const hasMorePosts = posts.length > 6;
                 <a href="https://twitter.com/" target="_blank" rel="noopener noreferrer" class="footer-icon-link" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
                 <a href="https://instagram.com/" target="_blank" rel="noopener noreferrer" class="footer-icon-link" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
                 <a href="https://github.com" target="_blank" rel="noopener noreferrer" class="footer-icon-link" aria-label="GitHub"><i class="fab fa-github"></i></a>
-                <div class="rounded-triangle"></div>
+                <a href="https://atcoder.jp/users/Caffeineholic" class="footer-icon-link" aria-label="AtCoderマイページ"><img src="/images/AtCoder_logo.png" alt="マイアイコン"></a>
+                <a href="https://web.wakayama-u.ac.jp/~kuze/lab/jp/index.html" class="footer-icon-link" aria-label="Adaptive-Network-lab"><img src="/images/Adaptive-Network-Laboratory-logo.png" alt="アダプティブネットワーク研究室ロゴ"></a>
             </div>
         </footer>
 
