--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -69,8 +69,8 @@ const hasMorePosts = posts.length > 6;
         <nav class="header-overlay-nav" id="overlay-nav">
             <div class="nav-list">
                 <a href="/" class="header-icon-link" aria-label="プロフィール"><i class="fas fa-user"></i></a>
-                <a href="/" class="header-icon-link" aria-label="ホーム"><i class="fas fa-book"></i></a>
-                <a href="/" class="header-icon-link" aria-label="制作物"><i class="fas fa-tools"></i></a>
+                <a href="/" class="header-icon-link" aria-label="ホーム"><i class="fas fa-pen-nib"></i></a>
+                <a href="/" class="header-icon-link" aria-label="制作物"><i class="fa-solid fa-cube"></i></a>
                 <a href="/" class="header-icon-link share" aria-label="共有"><i class="fas fa-share-square"></i></a>
             </div>
         </nav>
