--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -55,9 +55,9 @@ const hasMorePosts = posts.length > 6;
                     <a href="/" class="header-icon-link" aria-label="ホーム"><i class="fa-solid fa-house"></i></a>
                 </div>
                 <div class="header-right">
-                    <a href="/" class="header-icon-link" aria-label="プロフィール"><i class="fas fa-user"></i></a>
-                    <a href="/" class="header-icon-link" aria-label="ブログ"><i class="fas fa-pen-nib"></i></a>
-                    <a href="/" class="header-icon-link" aria-label="制作物"><i class="fa-solid fa-cube"></i></a>
+                    <a href="/#section-profile" class="header-icon-link" aria-label="プロフィール"><i class="fas fa-user"></i></a>
+                    <a href="/#section-blog" class="header-icon-link" aria-label="ブログ"><i class="fas fa-pen-nib"></i></a>
+                    <a href="/#section-works" class="header-icon-link" aria-label="制作物"><i class="fa-solid fa-cube"></i></a>
                     <a href="/" class="header-icon-link share" aria-label="共有"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
         </header>
