sectionのタイトルのクラス名指定

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -82,10 +82,10 @@ const hasMorePosts = posts.length > 6;
                 </div>
             </section>
             <section class="section-blog">
-                <h2 class="section-title">Blog</h2>
+                <h2 class="section-title-sentence">Blog</h2>
             </section>
             <section class="section-works">
-                <h2 class="section-title">Works</h2>
+                <h2 class="section-title-sentence">Works</h2>
             </section>
         </main>
 
